# Invenio-3

./: Makefile.am  configure.ac
config/: invenio.conf
modules/: Makefile.am
modules/bibfigure/: Makefile.am
modules/bibfigure/doc/: README  poppler.defs.patch  poppler.override.patch
modules/bibfigure/lib/: bibfigure_captionextractor.py  bibfigure_captionextractor_test.py  bibfigure_config.py  bibfigure_similarity.py  bibfigure_similarity_test.py  bibfigure_template.py  bibfigure_webinterface.py  bibfigure_webinterface_test.py
modules/bibfigure/web/: Makefile.am  body.html  index.html
modules/bibfigure/web/css/: Makefile.am  bibfig.basicStyles.css  bibfig.basic_styles.css  bibfig.selecting.css
modules/bibfigure/web/img/: Makefile.am
modules/bibfigure/web/js/: Makefile.am  bibfig.buslogger.js  bibfig.data.js  bibfig.figureControlsArea.js  bibfig.figuresSelector.js  bibfig.graphicalOps.js  bibfig.handlers.js  bibfig.imageView.js  bibfig.interface.js  bibfig.main.js  bibfig.pageViewArea.js  bibfig.pagesSelector.js  bibfig.selector.js  buslogger.js  data.js  figureControlsArea.js  figuresSelector.js  fractionDisplay.js  graphicalOps.js  handlers.js  imageView.js  interface.js  listLayout.js  main.js  pageViewArea.js  windowifyer.js
modules/miscutil/sql/: tabbibclean.sql  tabcreate.sql  tabdrop.sql
modules/oaiharvest/lib/: oai_harvest_admin.py  oai_harvest_daemon.py  oai_harvest_dblayer.py
modules/oaiharvest/web/admin/: oaiharvestadmin.py
modules/websearch/lib/: search_engine.py  websearch_webinterface.py
