## This file is part of Invenio.
## Copyright (C) 2011 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

#imgdir=$(localstatedir)/www/img

#img_DATA = mejs-invenio.css video_platform_record.css default_avatar.png

jsdir=$(localstatedir)/www/js

js_DATA = bibfig.windowifyer.js \
	bibfig.selector.js \
	bibfig.pageViewArea.js \
	bibfig.pagesSelector.js \
	bibfig.main.js \
	bibfig.interface.js \
	bibfig.imageView.js \
	bibfig.handlers.js \
	bibfig.graphicalOps.js \
	bibfig.figuresSelector.js \
	bibfig.figureControlsArea.js \
	bibfig.data.js \
	bibfig.buslogger.js

EXTRA_DIST = $(js_DATA)

CLEANFILES = *~ *.tmp *.pyc
